@@ -19,6 +19,7 @@ return (1, $self->msg('e5')) if $self->priv < 9;
 if ($ref = DXUser->get_current($call)) {
 	$line =~ s/^\s*$call\s+//;
 	$line =~ s/\s+//og;                    # remove any blanks
+	$line =~ s/[{}]//g;   # no braces allowed
 	$ref->passwd($line);
 	$ref->put();
 	push @out, $self->msg("password", $call);
